trunk/Archive2/49/e35983d69b217b/output
main.cpp: In function ‘int main()’:
main.cpp:5:21: error: invalid conversion from ‘const char (*)[6]’ to ‘char (*)[6]’ [-fpermissive]
     char (*p)[6] = &"hello";
                     ^
main.cpp:5:12: warning: unused variable ‘p’ [-Wunused-variable]
     char (*p)[6] = &"hello";
            ^
